--- a/Sort_Analize_Page.html
+++ b/Sort_Analize_Page.html
@@ -13,8 +13,8 @@
     <header>
         <div class="bg-[#232f3f] flex items-center justify-between border-b-[3px] px-4 border-[#ff8544]">
             <div class="flex items-center justify-start gap-[55px]">
-                <div class="pt-[10px] pb-2">
-                    <p class="text-white text-[39px] font-bold leading-[1] mb-[10px]">
+                <div class="pt-1 pb-2">
+                    <p class="text-white text-[39px] font-bold leading-[1] mb-1">
                         PPC
                     </p>
                     <p class="text-white text-[9px] font-bold">
@@ -84,7 +84,7 @@
         </div>
         <div class="container mx-10">
             <div class="container flex items-center justify-between table-dropdown">
-                <h2 class="text-[25px] font-light text-[#515151]">
+                <h2 class="text-[25px] font-light text-[#515151] mt-2">
                     Search Terms Analyzer
                 </h2>
                 <div class="table-dropbtn h-full cursor-pointer flex items-center relative justify-center flex-col gap-[2px] mt-[9px] mr-[13px] z-[60]">
@@ -3051,7 +3051,7 @@
                         </div>
                         <div class="flex items-center justify-start gap-3">
                             <div class="relative">
-                                <input type="text" class="w-[242px] bg-white h-[26px] pb-1 rounded pl-[30px] placeholder:text-sm text-sm border-[1px] border-gray_border_color">
+                                <input type="text" class="w-[242px] bg-white h-[26px] rounded pl-[30px] placeholder:text-sm text-sm border-[1px] border-gray_border_color">
                                 <p class="text-sm absolute bottom-1 left-[10px] text[#4e4e4e]">$</p>
                             </div>
                             <div class="flex items-center justify-between gap-3">
