--- a/Sort_Analize_Page.html
+++ b/Sort_Analize_Page.html
@@ -13,8 +13,8 @@
     <header>
         <div class="bg-[#232f3f] flex items-center justify-between border-b-[3px] px-4 border-[#ff8544]">
             <div class="flex items-center justify-start gap-[55px]">
-                <div class="pt-1 pb-2">
-                    <p class="text-white text-[39px] font-bold leading-[1] mb-1">
+                <div class="pb-1">
+                    <p class="text-white text-[39px] font-bold leading-[1]">
                         PPC
                     </p>
                     <p class="text-white text-[9px] font-bold">
