--- a/Sort_Analize_Page.html
+++ b/Sort_Analize_Page.html
@@ -734,9 +734,9 @@
                                 </span>
                             </td>
                             <td class="flex items-center justify-between w-full min-h-full help-table-wrapper table-dropdown text-sm text-[#65707a] font-normal border-l-[1px] border-[#d0d0d0] max-w-[63px] pl-1.5">
-                                Colour <span class="table-dropbtn border-none text-base z-10 relative cursor-pointer h-full flex items-center w-full pl-1.5">
+                                Colour <span class="table-dropbtn border-none text-base z-[49] relative cursor-pointer h-full flex items-center w-full px-1.5">
                                     <i class="fa-solid fa-ellipsis-vertical"></i>
-                                    <div class="help-table table-dropdown-content hidden absolute bg-white rounded-xl border-[1px] border-[#e8e8e8] w-[309px] h-[133px] left-0 z-[1] top-[30px]">
+                                    <div class="help-table table-dropdown-content hidden absolute bg-white rounded-xl border-[1px] border-[#e8e8e8] w-[309px] h-[133px] left-0 z-[50] top-[30px]">
                                         <div class="help-table-search p-3">
                                             <div class="flex items-center justify-between">
                                                 <button class="text-add_button_bg text-sm font-normal">
@@ -1562,7 +1562,7 @@
                                 <i class="fa-solid fa-plus mr-[7px] cursor-pointer"></i> iphone 7 wallet case
                             </td>
                             <td class="flex items-center justify-start gap-1 w-full min-h-full border-l-[1px] border-[#d0d0d0] z-10 max-w-[63px]">
-                                <div class="target-color flex items-center justify-between gap-1 w-fit pl-3 pr-[50%] h-full">
+                                <div class="target-color flex items-center justify-between gap-1 w-fit pl-3 pr-[30%] h-full">
                                     <div class="min-w-5 min-h-5 w-5 h-5 border-[1px] border-[#d5d5d5] bg-[#ddffbb] cursor-pointer color-table"></div>
                                     <div class="table-choose-colors h-full flex items-center justify-between gap-1 hidden">
                                         <span class="w-5 h-5 block border-[1px] border-[#d5d5d5] bg-[#ff9ae6] cursor-pointer choose-color-table"></span>
@@ -1623,7 +1623,7 @@
                                 <i class="fa-solid fa-minus mr-[7px] cursor-pointer"></i> iphone 7 wallet case for men
                             </td>
                             <td class="flex items-center justify-start gap-1 w-full min-h-full border-l-[1px] border-[#d0d0d0] z-10 max-w-[63px]">
-                                <div class="target-color flex items-center justify-between gap-1 w-fit pl-3 pr-[50%] h-full">
+                                <div class="target-color flex items-center justify-between gap-1 w-fit pl-3 pr-[30%] h-full">
                                     <div class="min-w-5 min-h-5 w-5 h-5 border-[1px] border-[#d5d5d5] bg-[#ddffbb] cursor-pointer color-table"></div>
                                     <div class="table-choose-colors h-full flex items-center justify-between gap-1 hidden">
                                         <span class="w-5 h-5 block border-[1px] border-[#d5d5d5] bg-[#ff9ae6] cursor-pointer choose-color-table"></span>
@@ -1684,7 +1684,7 @@
                                 iphone 7 wallet case men
                             </td>
                             <td class="flex items-center justify-start gap-1 w-full min-h-full border-l-[1px] border-[#d0d0d0] z-10 max-w-[63px]">
-                                <div class="target-color flex items-center justify-between gap-1 w-fit pl-3 pr-[50%] h-full">
+                                <div class="target-color flex items-center justify-between gap-1 w-fit pl-3 pr-[30%] h-full">
                                     <div class="min-w-5 min-h-5 w-5 h-5 border-[1px] border-[#d5d5d5] bg-[#ddffbb] cursor-pointer color-table"></div>
                                     <div class="table-choose-colors h-full flex items-center justify-between gap-1 hidden">
                                         <span class="w-5 h-5 block border-[1px] border-[#d5d5d5] bg-[#ff9ae6] cursor-pointer choose-color-table"></span>
@@ -1745,7 +1745,7 @@
                                 iphone 7 wallet case for men pres
                             </td>
                             <td class="flex items-center justify-start gap-1 w-full min-h-full border-l-[1px] border-[#d0d0d0] z-10 max-w-[63px]">
-                                <div class="target-color flex items-center justify-between gap-1 w-fit pl-3 pr-[50%] h-full">
+                                <div class="target-color flex items-center justify-between gap-1 w-fit pl-3 pr-[30%] h-full">
                                     <div class="min-w-5 min-h-5 w-5 h-5 border-[1px] border-[#d5d5d5] bg-[#ddffbb] cursor-pointer color-table"></div>
                                     <div class="table-choose-colors h-full flex items-center justify-between gap-1 hidden">
                                         <span class="w-5 h-5 block border-[1px] border-[#d5d5d5] bg-[#ff9ae6] cursor-pointer choose-color-table"></span>
@@ -1806,7 +1806,7 @@
                                 wallet case for men iphone 7
                             </td>
                             <td class="flex items-center justify-start gap-1 w-full min-h-full border-l-[1px] border-[#d0d0d0] z-10 max-w-[63px]">
-                                <div class="target-color flex items-center justify-between gap-1 w-fit pl-3 pr-[50%] h-full">
+                                <div class="target-color flex items-center justify-between gap-1 w-fit pl-3 pr-[30%] h-full">
                                     <div class="min-w-5 min-h-5 w-5 h-5 border-[1px] border-[#d5d5d5] bg-[#ddffbb] cursor-pointer color-table"></div>
                                     <div class="table-choose-colors h-full flex items-center justify-between gap-1 hidden">
                                         <span class="w-5 h-5 block border-[1px] border-[#d5d5d5] bg-[#ff9ae6] cursor-pointer choose-color-table"></span>
@@ -1867,7 +1867,7 @@
                                 iphone 7 wallet case men
                             </td>
                             <td class="flex items-center justify-start gap-1 w-full min-h-full border-l-[1px] border-[#d0d0d0] z-10 max-w-[63px]">
-                                <div class="target-color flex items-center justify-between gap-1 w-fit pl-3 pr-[50%] h-full">
+                                <div class="target-color flex items-center justify-between gap-1 w-fit pl-3 pr-[30%] h-full">
                                     <div class="min-w-5 min-h-5 w-5 h-5 border-[1px] border-[#d5d5d5] bg-[#ddffbb] cursor-pointer color-table"></div>
                                     <div class="table-choose-colors h-full flex items-center justify-between gap-1 hidden">
                                         <span class="w-5 h-5 block border-[1px] border-[#d5d5d5] bg-[#ff9ae6] cursor-pointer choose-color-table"></span>
@@ -1928,7 +1928,7 @@
                                 iphone 7 wallet case for men pres
                             </td>
                             <td class="flex items-center justify-start gap-1 w-full min-h-full border-l-[1px] border-[#d0d0d0] z-10 max-w-[63px]">
-                                <div class="target-color flex items-center justify-between gap-1 w-fit pl-3 pr-[50%] h-full">
+                                <div class="target-color flex items-center justify-between gap-1 w-fit pl-3 pr-[30%] h-full">
                                     <div class="min-w-5 min-h-5 w-5 h-5 border-[1px] border-[#d5d5d5] bg-[#ddffbb] cursor-pointer color-table"></div>
                                     <div class="table-choose-colors h-full flex items-center justify-between gap-1 hidden">
                                         <span class="w-5 h-5 block border-[1px] border-[#d5d5d5] bg-[#ff9ae6] cursor-pointer choose-color-table"></span>
@@ -1989,7 +1989,7 @@
                                 detachable wallet case iphone 7
                             </td>
                             <td class="flex items-center justify-start gap-1 w-full min-h-full border-l-[1px] border-[#d0d0d0] z-10 max-w-[63px]">
-                                <div class="target-color flex items-center justify-between gap-1 w-fit pl-3 pr-[50%] h-full">
+                                <div class="target-color flex items-center justify-between gap-1 w-fit pl-3 pr-[30%] h-full">
                                     <div class="min-w-5 min-h-5 w-5 h-5 border-[1px] border-[#d5d5d5] bg-[#ddffbb] cursor-pointer color-table"></div>
                                     <div class="table-choose-colors h-full flex items-center justify-between gap-1 hidden">
                                         <span class="w-5 h-5 block border-[1px] border-[#d5d5d5] bg-[#ff9ae6] cursor-pointer choose-color-table"></span>
@@ -2050,7 +2050,7 @@
                                 wallet case for men iphone 7
                             </td>
                             <td class="flex items-center justify-start gap-1 w-full min-h-full border-l-[1px] border-[#d0d0d0] z-10 max-w-[63px]">
-                                <div class="target-color flex items-center justify-between gap-1 w-fit pl-3 pr-[50%] h-full">
+                                <div class="target-color flex items-center justify-between gap-1 w-fit pl-3 pr-[30%] h-full">
                                     <div class="min-w-5 min-h-5 w-5 h-5 border-[1px] border-[#d5d5d5] bg-[#ddffbb] cursor-pointer color-table"></div>
                                     <div class="table-choose-colors h-full flex items-center justify-between gap-1 hidden">
                                         <span class="w-5 h-5 block border-[1px] border-[#d5d5d5] bg-[#ff9ae6] cursor-pointer choose-color-table"></span>
@@ -2111,7 +2111,7 @@
                                 iphone 7 wallet case
                             </td>
                             <td class="flex items-center justify-start gap-1 w-full min-h-full border-l-[1px] border-[#d0d0d0] z-10 max-w-[63px]">
-                                <div class="target-color flex items-center justify-between gap-1 w-fit pl-3 pr-[50%] h-full">
+                                <div class="target-color flex items-center justify-between gap-1 w-fit pl-3 pr-[30%] h-full">
                                     <div class="min-w-5 min-h-5 w-5 h-5 border-[1px] border-[#d5d5d5] bg-[#ddffbb] cursor-pointer color-table"></div>
                                     <div class="table-choose-colors h-full flex items-center justify-between gap-1 hidden">
                                         <span class="w-5 h-5 block border-[1px] border-[#d5d5d5] bg-[#ff9ae6] cursor-pointer choose-color-table"></span>
@@ -2172,7 +2172,7 @@
                                 wallet case for men iphone 7
                             </td>
                             <td class="flex items-center justify-start gap-1 w-full min-h-full border-l-[1px] border-[#d0d0d0] z-10 max-w-[63px]">
-                                <div class="target-color flex items-center justify-between gap-1 w-fit pl-3 pr-[50%] h-full">
+                                <div class="target-color flex items-center justify-between gap-1 w-fit pl-3 pr-[30%] h-full">
                                     <div class="min-w-5 min-h-5 w-5 h-5 border-[1px] border-[#d5d5d5] bg-[#ddffbb] cursor-pointer color-table"></div>
                                     <div class="table-choose-colors h-full flex items-center justify-between gap-1 hidden">
                                         <span class="w-5 h-5 block border-[1px] border-[#d5d5d5] bg-[#ff9ae6] cursor-pointer choose-color-table"></span>
@@ -2233,7 +2233,7 @@
                                 iphone 7 wallet case
                             </td>
                             <td class="flex items-center justify-start gap-1 w-full min-h-full border-l-[1px] border-[#d0d0d0] z-10 max-w-[63px]">
-                                <div class="target-color flex items-center justify-between gap-1 w-fit pl-3 pr-[50%] h-full">
+                                <div class="target-color flex items-center justify-between gap-1 w-fit pl-3 pr-[30%] h-full">
                                     <div class="min-w-5 min-h-5 w-5 h-5 border-[1px] border-[#d5d5d5] bg-[#ddffbb] cursor-pointer color-table"></div>
                                     <div class="table-choose-colors h-full flex items-center justify-between gap-1 hidden">
                                         <span class="w-5 h-5 block border-[1px] border-[#d5d5d5] bg-[#ff9ae6] cursor-pointer choose-color-table"></span>
@@ -2294,7 +2294,7 @@
                                 <i class="fa-solid fa-plus mr-[7px] cursor-pointer"></i> iphone 7 wallet case
                             </td>
                             <td class="flex items-center justify-start gap-1 w-full min-h-full border-l-[1px] border-[#d0d0d0] z-10 max-w-[63px]">
-                                <div class="target-color flex items-center justify-between gap-1 w-fit pl-3 pr-[50%] h-full">
+                                <div class="target-color flex items-center justify-between gap-1 w-fit pl-3 pr-[30%] h-full">
                                     <div class="min-w-5 min-h-5 w-5 h-5 border-[1px] border-[#d5d5d5] bg-[#ddffbb] cursor-pointer color-table"></div>
                                     <div class="table-choose-colors h-full flex items-center justify-between gap-1 hidden">
                                         <span class="w-5 h-5 block border-[1px] border-[#d5d5d5] bg-[#ff9ae6] cursor-pointer choose-color-table"></span>
@@ -2355,7 +2355,7 @@
                                 <i class="fa-solid fa-plus mr-[7px] cursor-pointer"></i> iphone 7 wallet case
                             </td>
                             <td class="flex items-center justify-start gap-1 w-full min-h-full border-l-[1px] border-[#d0d0d0] z-10 max-w-[63px]">
-                                <div class="target-color flex items-center justify-between gap-1 w-fit pl-3 pr-[50%] h-full">
+                                <div class="target-color flex items-center justify-between gap-1 w-fit pl-3 pr-[30%] h-full">
                                     <div class="min-w-5 min-h-5 w-5 h-5 border-[1px] border-[#d5d5d5] bg-[#ddffbb] cursor-pointer color-table"></div>
                                     <div class="table-choose-colors h-full flex items-center justify-between gap-1 hidden">
                                         <span class="w-5 h-5 block border-[1px] border-[#d5d5d5] bg-[#ff9ae6] cursor-pointer choose-color-table"></span>
