--- a/Sort_Analize_Page.html
+++ b/Sort_Analize_Page.html
@@ -2451,10 +2451,14 @@
                         <thead>
                             <tr class="table-head flex w-full border-[1px] border-t-0 border-scrollable_title_border min-h-[40px]">
                                 <td class="flex p-[6px] items-center justify-center border-none min-h-full text-base text-[#65707a] font-normal border-l-[1px] border-[#d0d0d0]"><input type="checkbox" class="table-checkbox checked:bg-[#878787] scale-100"></td>
-                                <td class="flex items-center justify-between w-full min-h-full help-table-wrapper table-dropdown text-base text-[#65707a] font-normal border-l-[1px] border-[#d0d0d0] max-w-[173px] pl-3">
-                                    Portfolio <span class="table-dropbtn border-none text-base z-10 relative inline-block cursor-pointer px-3">
+                                <!--WORKS-->
+                                <td class="flex items-center justify-between w-full min-h-full help-table-wrapper table-dropdown text-base text-[#65707a] font-normal border-l-[1px] border-[#d0d0d0] max-w-[173px] overflow-hidden relative">
+                                    <p class="overflow-x-hidden w-full pl-3">
+                                        Portfolio
+                                    </p>
+                                    <span class="table-dropbtn border-none text-base z-10 absolute right-0 inline-block cursor-pointer px-3 bg-white">
                                         <i class="fa-solid fa-ellipsis-vertical"></i>
-                                        <div class="help-table table-dropdown-content hidden absolute bg-white rounded-xl border-[1px] border-[#e8e8e8] w-[309px] h-[190px] left-0 z-[1]">
+                                        <div class="help-table  overflow-none table-dropdown-content hidden absolute bg-white rounded-xl border-[1px] border-[#e8e8e8] w-[309px] h-[190px] left-0 z-[1]">
                                             <div class="help-table-search p-3">
                                                 <div class="flex items-center justify-between">
                                                     <div class="relative">
@@ -2503,7 +2507,12 @@
                                         </div>
                                     </span>
                                 </td>
-                                <td class="flex items-center justify-between w-full min-h-full help-table-wrapper table-dropdown text-base text-[#65707a] font-normal border-l-[1px] border-[#d0d0d0] max-w-[247px] pl-3">Campaing Group <span class="table-dropbtn border-none text-base z-10 relative inline-block cursor-pointer px-3">
+                                <!--WORKS-->
+                                <td class="flex items-center justify-between w-full min-h-full help-table-wrapper table-dropdown text-base text-[#65707a] font-normal border-l-[1px] border-[#d0d0d0] max-w-[247px] relative">
+                                    <p class="overflow-x-hidden w-full pl-3">
+                                        Campaing Group
+                                    </p>
+                                    <span class="table-dropbtn border-none text-base z-10 absolute right-0 inline-block cursor-pointer px-3 bg-white">
                                     <i class="fa-solid fa-ellipsis-vertical"></i>
                                     <div class="help-table table-dropdown-content hidden absolute bg-white rounded-xl border-[1px] border-[#e8e8e8] w-[309px] h-[190px] left-0 z-[1]">
                                         <div class="help-table-search p-3">
@@ -3070,7 +3079,7 @@
                         <thead>
                             <tr class="table-head flex w-full border-[1px] border-t-0 border-scrollable_title_border min-h-[40px]">
                                 <td class="flex p-[6px] items-center justify-center border-none min-h-full text-base text-[#65707a] font-normal border-l-[1px] border-[#d0d0d0]"><input type="checkbox" class="table-checkbox checked:bg-[#878787] scale-100"></td>
-                                <td class="flex items-center justify-between w-full min-h-full help-table-wrapper table-dropdown text-base text-[#65707a] font-normal border-l-[1px] border-[#d0d0d0] max-w-[173px] pl-3">
+                                <td class="flex items-center justify-between w-full min-h-full help-table-wrapper table-dropdown text-base text-[#65707a] font-normal overflow-hidden border-l-[1px] border-[#d0d0d0] max-w-[173px] pl-3">
                                     Portfolio <span class="table-dropbtn border-none text-base z-10 relative inline-block cursor-pointer px-3">
                                         <i class="fa-solid fa-ellipsis-vertical"></i>
                                         <div class="help-table table-dropdown-content hidden absolute bg-white rounded-xl border-[1px] border-[#e8e8e8] w-[309px] h-[190px] left-0 z-[1]">
